# BasicRenderer

./: .gitignore  BasicRenderer.sln  LICENSE  README.md
.github/workflows/: CI.yml
Assets/scenes/: cornell_box.json
BasicRenderer/: AccelerationStructure.cpp  AccelerationStructure.h  BasicRenderer.cpp  BasicRenderer.h  BasicRenderer.vcxproj  BasicRenderer.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Face.cpp  Face.h  FrameBuffer.cpp  FrameBuffer.h  Global.h  Hitable.cpp  Hitable.h  ImageExporter.cpp  ImageExporter.h  ImageFormats.cpp  ImageFormats.h  InputEvent.h  InputManager.h  Material.cpp  Material.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h  PointLight.h  Primitive.cpp  Primitive.h  PrimitiveTypes.cpp  PrimitiveTypes.h  Rasterizer.cpp  Rasterizer.h  Ray.h  (+24 more)
BasicRenderer/header/: AccelerationStructure.h  BasicRenderer.h  Camera.h  DirectionalLight.h  Face.h  FrameBuffer.h  Global.h  MeshInstance.h  Model.h  ObjLoader.h  PointLight.h  Primitive.h  PrimitiveTypes.h  Rasterizer.h  Raytracer.h  RenderState.h  RenderSystem.h  Transform.h  World.h
BasicRenderer/include/: AccelerationStructure.h  BasicRenderer.h  Camera.h  Color.h  DirectionalLight.h  Face.h  FrameBuffer.h  Global.h  InputEvent.h  InputManager.h  Material.h  Matrix4.h  Mesh.h  MeshInstance.h  Model.h  ObjLoader.h  PathUtils.h  PointLight.h  Primitive.h  PrimitiveTypes.h  Rasterizer.h  Ray.h  Raytracer.h  RenderState.h  SceneLoader.h  SceneObject.h  TestScene.h  Transform.h  Vector2.h  Vector3.h  Vector4.h  Vertex.h  World.h
BasicRenderer/source/: AccelerationStructure.cpp  BasicRenderer.cpp  Camera.cpp  Color.cpp  DirectionalLight.cpp  Face.cpp  FrameBuffer.cpp  ImageExporter.cpp  ImageFormats.cpp  InputEvent.cpp  InputManager.cpp  Material.cpp  Matrix4.cpp  Mesh.cpp  MeshInstance.cpp  Model.cpp  ObjLoader.cpp  PathUtils.cpp  PointLight.cpp  Primitive.cpp  PrimitiveTypes.cpp  Rasterizer.cpp  Ray.cpp  Raytracer.cpp  RenderState.cpp  SceneLoader.cpp  SceneObject.cpp  TestScene.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  Vertex.cpp  World.cpp  main.cpp
BasicRenderer/test/: TestMath.cpp  TestRendering.cpp  TestSceneLoader.cpp
QtGUI/: .qmake.stash  BasicRendererUI.ilk  QRenderingWidget.cpp  QRenderingWidget.h  QtGUI.pro  QtGUI.pro.user.4.8-pre1  QtGUI.vcxproj  QtGUI.vcxproj.filters  QtGUI_resource.rc  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
assets/scenes/: cornell_box.json
scripts/: profile.sh
